--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -123,7 +123,7 @@
 
 \begin{center}
     \textbf{\Huge \scshape Josef Karpinski} \\ \vspace{1pt}
-    \small Middletown, CT $|$ 203-494-0996 $|$ \href{mailto:x@x.com}{\underline{josef.karpinski@uconn.edu}}  \\ \vspace{1pt}
+    \small Middletown, CT $|$ 203-494-0996 $|$ \href{mailto:josef.karpinski@uconn.edu}{\underline{josef.karpinski@uconn.edu}}  \\ \vspace{1pt}
     \href{https://linkedin.com/in/josefkarpinski}{\underline{linkedin.com/in/josefkarpinski}} $|$
     \href{https://github.com/josef-karpinski}{\underline{github.com/josef-karpinski}}
 \end{center}
@@ -137,35 +137,55 @@
       {Bachelor of Science in Computer Science}{Grad: May 2026}
       {Bachelor of Arts in Applied Mathematics}{GPA: 4.0 / 4.0}
       \resumeItemListStart
-        \resumeItem{College of Engineering Dean's List}
-        \resumeItem{Relevant Coursework: Data Structures, Discrete Systems, Systems Programming, Algorithms \& Complexity }
+        \resumeItem{Awards: 2023 Babbidge Scholar, 4x College of Engineering Dean's List}
+        \resumeItem{Relevant Coursework: Data Structures, Discrete Systems, Systems Programming, Algorithms \& Complexity, Cybersecurity Lab,  Computer Architecture, Artificial Intelligence, Big Data Analytics, Principles of Databases}
       \resumeItemListEnd
 
 
   \resumeSubHeadingListEnd
 
+%------------Experience-----------
+\section{Experience}
+    \resumeSubHeadingListStart
+        \resumeSubheading
+        {Software Engineering Intern}{May 2024 -- Present}
+        {Pratt \& Whitney}{East Hartford, CT}
+            \resumeItemListStart
+                % \resumeItem{Refactored frontend code using VueJS, enhancing maintainability and reusability, drastically reducing the time needed to develop new AWS Lambda scripts }
+                % \resumeItem{Developed and deployed 3 Python/pandas report generation tools to AWS Lambda, all whilst collecting feedback from stakeholders and continously improving the tools}
+                % \resumeItem{Practiced Git, GitHub, and Scrum Agile methodologies to streamline team workflows and improve efficiency}
+                % \resumeItem{Acquired in-depth knowledge of the team's AWS cloud production architecture and completed AWS Cloud Essentials training}
 
+                \resumeItem{ Developed and deployed an app directory used by 100+ employees in my organization, utilizing VueJS and AWS}
+                \resumeItem{ Developed 3 report generation tools estimated to save the organization over \$20000/year in engineering labor, using Python, pandas, NumPy, AWS Lambda, and AWS CloudFormation}
+                \resumeItem{ Gained continuous experience with Git, GitHub, and Scrum Agile Methodologies for project workflows and efficiency }
+                \resumeItem{ Gained in-depth knowledge of AWS best practices in security and app development}
+            \resumeItemListEnd
+    \resumeSubHeadingListEnd
+        
 %------------Projects-----------
 \section{Projects}
     \resumeSubHeadingListStart
-      \resumeProjectHeading
-          {\textbf{Quizlet to PDF} $|$ \emph{Web Development + Chrome API}}{July 2023 -- Present}
+        \resumeProjectHeading
+          {\textbf{Circlegame} $|$ \emph{Full-Stack + Game Design}}{May 2022 -- Present}
           \resumeItemListStart
-            \resumeItem{Developing a Google Chrome Extension where users can turn online Quizlet flashcard sets into PDFs that can be printed as physical flashcards}
-            \resumeItem{Coding in JavaScript while utilizing the Chrome Developer API}
+            \resumeItem{Developed a minimalistic aim trainer  using the MERN development stack (MongoDB, Express,  React, Node)}
+            \resumeItem{Led a team of developers and leveraged Git and Agile methodologies to improve workflows and overall production}
+            \resumeItem{Built an interactive and aesthetic frontend UI using React and p5.js}
+            \resumeItem{Implemented a backend server using Node.js, Express, and MongoDB to manage user authentication, handle user scores, and maintain a dynamic leaderboard system}
           \resumeItemListEnd
       \resumeProjectHeading
-          {\textbf{ValoScout} $|$ \emph{Data Analytics + REST API}}{June 2023 -- July 2023}
+          {\textbf{QuizCards} $|$ \emph{Web Development + Chrome API}}{April 2024 -- June 2024}
           \resumeItemListStart
-            \resumeItem{Developed a program that allows users to scout and analyze semi-professional VALORANT teams}
-            \resumeItem{Coded in Python whilst utilizing the Riot Games REST API}
+            \resumeItem{Developed a Google Chrome Extension where users can turn online Quizlet flashcard sets into physical flashcards}
+            \resumeItem{Implemented customizable PDF creation functionality using JavaScript and the Chrome Developer API}
           \resumeItemListEnd
       \resumeProjectHeading
-          {\textbf{Circlegame} $|$ \emph{Full-Stack + Game Design}}{May 2022 -- January 2023}
+          {\textbf{ValoScout} $|$ \emph{Data Analytics + REST API}}{June 2023 -- November 2023}
           \resumeItemListStart
-            \resumeItem{Designed and developed a desktop application to serve as an aim training video game}
-            \resumeItem{Developed in Java using the Processing.org library}
-            \resumeItem{Developed and deployed Circlegame's very own website using HTML, CSS, and JavaScript}
+            \resumeItem{Developed a comprehensive program to scout and analyze semi-professional VALORANT teams, providing valuable competitive insights for high-level tournament play}
+            \resumeItem{Implemented a Python program for web-scraping, aggregating, and structuring data from multiple sources}
+            \resumeItem{Created interactive dashboards for visualizing team performance metrics and trends}
           \resumeItemListEnd
     \resumeSubHeadingListEnd
 
@@ -184,40 +204,39 @@
       \resumeProjectHeading
           {\textbf{Google Data Analytics} $|$ \emph{Coursera}}{August 2023}
           \resumeItemListStart
-            \resumeItem{Completed 8 courses on the fundamentals of Data Analytics}
             \resumeItem{Learned key analytical skills such as data cleaning, analysis, and visualization}
-            \resumeItem{Learned how to use essential analytic tools such as spreadsheets, SQL, R Programming, and Tableau.}
+            \resumeItem{Learned how to use essential analytic tools such as spreadsheets, SQL, R Programming, and Tableau}
           \resumeItemListEnd
     \resumeSubHeadingListEnd
 
 
 %-----------Leadership & Activities-----------
 
-\section{Leadership \& Activities}
-    \resumeSubHeadingListStart
-      \resumeProjectHeading
-          {\textbf{UConn Competitive Valorant} $|$ \emph{Team Captain}}{August 2022 -- Current}
-          \resumeItemListStart
-            \resumeItem{Organize and communicate important details to team members regarding scheduled practices and matches}
-            \resumeItem{Travel New England whilst competing in numerous collegiate leagues and tournaments}
-          \resumeItemListEnd
-      \resumeProjectHeading
-          {\textbf{UConn Data Science Club} $|$ \emph{Member}}{September 2022 -- Current}
+% \section{Leadership \& Activities}
+%     \resumeSubHeadingListStart
+%       \resumeProjectHeading
+%           {\textbf{UConn Competitive Valorant} $|$ \emph{Team Captain}}{August 2022 -- Current}
+%           \resumeItemListStart
+%             \resumeItem{Organize and communicate important details to team members regarding scheduled practices and matches}
+%             \resumeItem{Travel New England whilst competing in numerous collegiate leagues and tournaments}
+%           \resumeItemListEnd
+%       \resumeProjectHeading
+%           {\textbf{UConn Data Science Club} $|$ \emph{Member}}{September 2022 -- Current}
 
-        \resumeProjectHeading
-          {\textbf{UConn AI Club} $|$ \emph{Member}}{September 2023 -- Current}
+%         \resumeProjectHeading
+%           {\textbf{UConn AI Club} $|$ \emph{Member}}{September 2023 -- Current}
 
 
-    \resumeSubHeadingListEnd
+%     \resumeSubHeadingListEnd
 
 %-----------PROGRAMMING SKILLS-----------
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
      \textbf{Languages}{: Python, Java, C, R, SQL, HTML, CSS, JavaScript} \\
-     \textbf{Frameworks}{: React, Node.js, Django, Flask, WordPress} \\
-     \textbf{Developer Tools}{: Git, GitHub, Docker, Kubernetes} \\
-     \textbf{Libraries}{: PyTorch, NumPy, Matplotlib, PDF-LIB.js, p5.js, Processing}
+     \textbf{Frameworks}{: React, Node.js, Express.js, Django, Flask, WordPress, Vue.js} \\
+     \textbf{Developer Tools}{: Git, GitHub, Docker, Kubernetes, Agile, Scrum, AWS S3, AWS Lambda, AWS Cloudformation} \\
+     \textbf{Libraries}{: PyTorch, NumPy, pandas, Matplotlib, PDF-LIB.js, p5.js, Processing}
     }}
  \end{itemize}
 
